# Tx-Evaluation

./: .gitignore  Contribute.md  README.md  main_eval.py  pyproject.toml
biomodalities/args/: __init__.py  data_args.py  eval_args.py  utils_args.py
biomodalities/backbones/transformers/: tokenizer.py  transformer.py
biomodalities/data/: custom_dataloaders.py  custom_datasets.py  data_split.py  data_utils.py  post_process.py
biomodalities/eval/: __init__.py  bmdb.py  ilisi.py  knn.py  linear_probing.py  reconstruction.py  visual.py
biomodalities/methods/: scvi_embeds.py
biomodalities/utils/: lr_scheduler.py  metrics.py  misc.py  plot.py  preprocessing.py
cfg/config/: l1000_eval.yaml  l1000_eval_reconstruct.yaml  replogle_eval.yaml  replogle_eval_reconstruct.yaml  rxrx_internal_eval.yaml  rxrx_internal_eval_reconstruct.yaml
cfg/schedulers/: submit_arrays.sh  submit_jobs.sh
cfg/scripts/: data_splitting.slurm
cfg/scripts/templates/: huvec_compounds_template.slurm  l1000_array_eval_template.slurm  replogle_array_eval_template.slurm  replogle_eval_template.slurm  rpe1_eval_template.slurm
